# CrewPilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  start.sh
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  bootstrap_auth.py  models.py  seed.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 202606300001_initial_core_schema.py  202606300002_schedule_commands.py  202606300003_optimization_proposals.py  202606300004_schedule_history_actor.py  202606300005_optimization_runs.py  (+13 more)
apps/api/app/modules/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/app/modules/optimization/: adapter.py  scope.py  service.py
apps/api/app/modules/planning/: models.py  repository.py  router.py  service.py
apps/api/app/modules/proposals/: router.py  schemas.py  service.py
apps/api/app/modules/schedule/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/schedule_editor/: commands.py  explanations.py  service.py  warnings.py
apps/api/app/modules/setup/: router.py  schemas.py  service.py
apps/api/app/modules/staff/: models.py
apps/api/app/modules/stores/: models.py  repository.py  router.py  service.py
apps/api/app/modules/workspaces/: router.py  schemas.py  service.py
apps/api/app/shared/: schemas.py
apps/api/tests/: test_openapi.py  test_ortools_solver.py  test_schedule_command_undo.py
(+66 files in other folders)
